--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
       <h1>Herman Wong</h1>
       <hr />
       <p>
-        I live my life a quarter mile at a time. Nothing else matters. Not the
-        mortage, not the store, not my team and all their bullshit. For those 10
-        seconds or less, I'm free.
+        I am a manufacturing engineer in a semiconductor capital equipment
+        company for a living. At night, I teach myself web deveolopment. I am
+        most familiar with JS and React. I am looking forawrd to be a full time
+        web developer in the near future :)
       </p>
     </div>
   </div>
