--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
       <hr />
       <p>
         I am a manufacturing engineer in a semiconductor capital equipment
-        company for a living. At night, I teach myself web deveolopment. I am
-        most familiar with JS and React. I am looking forawrd to be a full time
-        web developer in the near future :)
+        company in Silicon Valley for a living. At night, I teach myself web
+        deveolopment. I am most familiar with JS and React. Currently looking
+        for a full time Web Developer position in California.
       </p>
     </div>
   </div>
