Updated Projects List with Full Stack Projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-6 text-center">
+      <div class="col-lg-4 col-md-6 text-center">
         <div class="service-box">
           <h3>Kanban Board</h3>
           <p class="text-muted mb-3">
@@ -18,7 +18,7 @@
           <a href="/kanban" class="btn-link">View Kanban</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 text-center">
+      <div class="col-lg-4 col-md-6 text-center">
         <div class="service-box">
           <h3>Select</h3>
           <p class="text-muted">
@@ -27,7 +27,7 @@
           <a href="/select" class="btn-link">View Select</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 text-center">
+      <div class="col-lg-4 col-md-6 text-center">
         <div class="service-box">
           <h3>Minesweeper</h3>
           <p class="text-muted">
@@ -36,7 +36,7 @@
           <a href="/minesweeper" class="btn-link">Play Minesweeper</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 text-center">
+      <div class="col-lg-4 col-md-6 text-center">
         <div class="service-box">
           <h3>React Map</h3>
           <p class="text-muted">
@@ -46,6 +46,33 @@
             own city. Built on MERN stack.
           </p>
           <a href="https://github.com/hwong0305/react-map" class="btn-link"
+            >Code</a
+          >
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 text-center">
+        <div class="service-box">
+          <h3>Angular Calendar</h3>
+          <p class="text-muted">
+            A Web Application that allows users to enter calendar events. The
+            application is built on Angular 6 with ExpressJS and PostgresSQl
+          </p>
+          <a
+            href="https://github.com/hwong0305/angular-calendar"
+            class="btn-link"
+            >Code</a
+          >
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 text-center">
+        <div class="service-box">
+          <h3>Tab Tracker</h3>
+          <p class="text-muted">
+            This is built following Cody Seibert's Tutorial on building a Full
+            Stack Web Application. This application allows users to store and
+            edit their songs and guitar tabs.
+          </p>
+          <a href="https://github.com/hwong0305/tab-tracker" class="btn-link"
             >Code</a
           >
         </div>
