Added emphasis on links and adding image header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,12 @@
       <h1>Herman Wong</h1>
       <hr />
       <p>
-        I am a manufacturing engineer in a semiconductor capital equipment
-        company in Silicon Valley for a living. At night, I teach myself web
-        deveolopment. I am most familiar with JS and React. Currently looking
-        for a full time Web Developer position in California.
+        I am currently working as a manufacturing engineer in the semiconductor
+        capital equipment industry. I am teaching myself web development with
+        the goal of becoming a full stack web developer. I have taught myself a
+        variety of programming languages but I am most familiar with React,
+        Javascript and Python. I am looking for a Full Stack Developer position
+        in California.
       </p>
     </div>
   </div>
