--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -55,7 +55,7 @@
           <h3>Angular Calendar</h3>
           <p class="text-muted">
             A Web Application that allows users to enter calendar events. The
-            application is built on Angular 6 with ExpressJS and PostgresSQl
+            application is built on Angular 6 with ExpressJS and PostgresSQL
           </p>
           <a
             href="https://github.com/hwong0305/angular-calendar"
