--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 
 body {
@@ -150,13 +151,25 @@ aside {
 // Homepage Header
 
 header {
+  &:after {
+    content: ' ';
+    background: #000;
+    position: absolute;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: block;
+  }
   position: relative;
   width: 100%;
   min-height: auto;
   @include background-cover;
   background: gray;
-  // background-position: center;
-  // background-image: url('../img/header.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url('../img/header.jpg');
   text-align: center;
   color: white;
   .header-content {
@@ -165,6 +178,7 @@ header {
     padding: 100px 15px 100px;
     width: 100%;
     .header-content-inner {
+      background: rgba(0, 0, 0, 0.3);
       h1 {
         font-weight: 700;
         text-transform: uppercase;
@@ -175,8 +189,9 @@ header {
         margin: 30px auto;
       }
       p {
+        position: relative;
         font-weight: 300;
-        color: rgba(white, 0.7);
+        color: white;
         font-size: 16px;
         margin-bottom: 50px;
       }
@@ -220,6 +235,11 @@ header {
   }
   p {
     margin-bottom: 0;
+  }
+  &:hover {
+    .btn-link {
+      font-weight: 700;
+    }
   }
 }
 
