Changed Kanban App to Drag and Drop React version

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,8 @@
         <div class="service-box">
           <h3>Kanban Board</h3>
           <p class="text-muted mb-3">
-            A Kanban Board web application built using Vanilla Javascript.
+            A Kanban Board web application built using React and
+            React-Beautiful-Dnd.
           </p>
           <a href="/kanban" class="btn-link">View Kanban</a>
         </div>
